--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@mui/material": "^5.15.5",
     "@mui/styled-engine-sc": "^6.0.0-alpha.12",
     "axios": "^1.6.6",
+    "firebase": "^10.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "^6.21.3",
     "react-window": "^1.8.10",
     "styled-components": "^6.1.8"
