--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.12",
     "@table-library/react-table-library": "^4.1.7",
     "axios": "^1.6.6",
+    "chart.js": "^4.4.2",
     "firebase": "^10.7.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "^6.21.3",
     "react-table": "^7.8.0",
     "react-window": "^1.8.10",
+    "recharts": "^2.12.2",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
